# 3D-MOLED

./: LICENSE  readme.md
Deep_Learning_3D_MOLED/: bingo_test_3D.py  bingo_train_3D_fast.py
Deep_Learning_3D_MOLED/network/: R2AttUNet_3d.py  UNet_3d.py
Deep_Learning_3D_MOLED/tools/: data_loader.py  data_loader_mat.py
Deep_Learning_ModSyn/: bingo_test.py  bingo_train.py
Deep_Learning_ModSyn/dataset_demo/brain/: test_01.mat
Deep_Learning_ModSyn/dataset_demo/train/: data_01.mat
Deep_Learning_ModSyn/network/: UNet.py
Deep_Learning_ModSyn/tools/: cal_dataload_speed.py  data_loader.py
SMRI_for_3D_MOLED_simu/: CMakeLists.txt  readme.md
SMRI_for_3D_MOLED_simu/configs/: mainCfg.json
SMRI_for_3D_MOLED_simu/seqs/: CMakeLists.txt
SMRI_for_3D_MOLED_simu/seqs/ARBITRARY/: seqARBITRARY.cpp  seqARBITRARY.h  seqARBITRARY.json
SMRI_for_3D_MOLED_simu/seqs/GREOLEDMS3Dp3_BUDA/: seqGREOLEDMS3Dp3_BUDA.cpp  seqGREOLEDMS3Dp3_BUDA.h  seqGREOLEDMS3Dp3_BUDA.json
code_t2star_QSM_process/: Batch_step1_gen_mask.m  Batch_step2_gen_t2star.m  Batch_step3_gen_qsm.m  Batch_step4_mat2dcm_for_reg.m  Batch_step5_fsl_reg.sh  Single_GRE_QSM_from_nii.m  Single_GRE_T2star_from_dicom.m
code_train_test_process/demo_SMRI_out/: 1.out
code_train_test_process/demo_VObj/: 1.mat
code_train_test_process/process_data_for_VObj/: Batch_3Dto2D_Random.m  Batch_produce_B1_3D.m  show_VObj.m
code_train_test_process/process_data_for_VObj/lib/: Model_to_VObj.m  PhanGene.m
code_train_test_process/process_data_from_SMRI/: SMRI_batch_out2input_3D.m  SMRI_out_analysis_slice.m
code_train_test_process/process_data_from_Scanner/: Step1_dicom_categorization.m  Step2_dicom2mat_3DMOLED.m  Step3_mat2input_3DMOLED.m
tools/: T2Map.m
tools/STISuite_V3.0/: STI_Templates.m
